Fix window title not being truncated with ellipsis

--- a/src/desktop.css
+++ b/src/desktop.css
@@ -58,29 +58,29 @@ a.file
 {
 	flex: 0 1 auto;
 	user-select: none;
+	display: flex;
 }
 
 .window-title
 {
-	display: inline-flex;
+	flex: 1 1 auto;
+
 	padding: 5px;
 
 	text-overflow: ellipsis;
-	width: calc(100% - 70px);
 	overflow: hidden;
 	white-space: nowrap;
 }
 
 .window-close, .window-maximise
 {
+	flex: 0 1 auto;
+
 	font-family: monospace;
-	display: inline-block;
-	position: relative;
-	float: right;
 	padding: 6px;
 	min-width: 16px; /* width - padding */
-	height: calc(100% - 12px);
 	text-align: center;
+
 	transition: all 250ms;
 }
 
